vlib/v/checker/tests/enum_err.out
vlib/v/checker/tests/enum_err.vv:4:13: error: the default value for an enum has to be an integer
    2 | 
    3 | enum Color {
    4 |     green = 'green'
      |             ~~~~~~~
    5 |     yellow
    6 |     blue
